Add SQLite support and implement CRUD operations
Refactored the architecture to support SQLite as the database provider.
- Added `Microsoft.EntityFrameworkCore.Sqlite` and design-time tools.
- Implemented CRUD operations for `Customer`, `Order`, and `Product`.
- Introduced migrations for database schema management.
- Updated namespaces for consistency and modularity.
- Added `PagedRequest` and `PagedResponse` for pagination support.
- Standardized API responses with a generic `Response` class.
- Created SQLite database file (`app.db`) for local development.

--- a/src/BugStore.Api/BugStore.Api.csproj
+++ b/src/BugStore.Api/BugStore.Api.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3fc50427-8424-48e4-9774-b1360f7a155c</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
+  </ItemGroup>
 
 </Project>
